(library
 (name tuyau_mirage)
 (public_name tuyau-mirage)
 (modules tuyau_mirage)
 (libraries cstruct lwt tuyau))

(library
 (name tuyau_mirage_tls)
 (public_name tuyau-mirage.tls)
 (optional)
 (modules tuyau_mirage_tls)
 (libraries tuyau-mirage tuyau-tls))

(library
 (name tuyau_mirage_tcp)
 (public_name tuyau-mirage.tcp)
 (optional)
 (modules tuyau_mirage_tcp)
 (libraries logs mirage-stack bigstringaf ke tcpip.tcp tuyau-mirage))
